--- a/sgENERATE/recource/Snakefile
+++ b/sgENERATE/recource/Snakefile
@@ -108,10 +108,8 @@ else:
             'result/final_{species}_SG_ER.pdf'
         conda:
             'env/pyt.yaml'
-        shell:
-            'touch {output}'
-        # script:
-        #     'script/make_stats.py'
+        script:
+            'script/make_stats.py'
 
 
 rule periscope:
@@ -161,7 +159,7 @@ rule run_periscope_multi:
     benchmark:
         "benchmarks/PeriscopeMult_{species}.txt"
     shell:
-        "periscope --fastq {input} --gff script/covid.gff --technology ont --artic-primers V3 --output-prefix Periscope_mult/{wildcards.species} --threads 18;rm Periscope_mult/COV.*"
+        "periscope --fastq {input} --gff "+path+"script/covid.gff --technology ont --artic-primers V3 --output-prefix Periscope_mult/{wildcards.species} --threads 18;rm Periscope_mult/COV.*"
 
 rule getnbread:
     input:
