--- a/sgENERATE/recource/Snakefile
+++ b/sgENERATE/recource/Snakefile
@@ -101,7 +101,9 @@ else:
             peri2='Periscope_mult/{species}_periscope.bam',
             d2='Periscope_mult/{species}_periscope_novel_counts.csv',
             b='result/{species}_multifastq.faa',
-            nbread='result/{species}_nbread.txt'
+            nbread='result/{species}_nbread.txt',
+            opt1='Periscope_mult/{species}_periscope.bam.bai'
+            opt2='Periscope/{species}_periscope.bam.bai'
         output:
             'result/final_{species}_SG_ER.pdf'
         conda:
@@ -131,6 +133,21 @@ rule periscope:
         """ 
 
 
+rule make_index_perm:
+    input:
+        'Periscope_mult/{species}_periscope.bam'
+    output:
+        'Periscope_mult/{species}_periscope.bam.bai'
+    shell:
+        'samtools index {input}'
+
+rule make_index_per:
+    input:
+        'Periscope/{species}_periscope.bam'
+    output:
+        'Periscope/{species}_periscope.bam.bai'
+    shell:
+        'samtools index {input}'
 
 
 rule run_minimap2:
