--- a/environment.yml
+++ b/environment.yml
@@ -4,14 +4,14 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - samtools
-  - pip
-  - snakemake-minimal
-  - python
-  - biopython
-  - matplotlib
-  - pysam
-  - upsetplot
-  - pandas
-  - matplotlib-venn
+  - samtools==1.18
+  - pip==23.3.1
+  - snakemake-minimal==7.32.4
+  - python==3.10.13
+  - biopython==1.81 
+  - matplotlib==3.8.2
+  - pysam==0.22.0
+  - upsetplot==0.8.0
+  - pandas==2.1.3
+  - matplotlib-venn==0.11.9
 
