--- a/sgENERATE/recource/env/perimult.yaml
+++ b/sgENERATE/recource/env/perimult.yaml
@@ -18,8 +18,8 @@ dependencies:
   - pybedtools=0.8.1
   - snakemake-minimal=5.13
   - pytest=5.4.2
-  - pip=20.0.2
-  - setuptools=52.0.0
+  - pip==23.3.1
+  - setuptools
   - pyvcf=0.6.8
   - bcbio-gff
   - pip:
