--- a/sgENERATE/recource/env/perimult.yaml
+++ b/sgENERATE/recource/env/perimult.yaml
@@ -4,24 +4,25 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - python=3.8
-  - tqdm=4.46.0
-  - plotnine=0.7.0
-  - pandas=1.0.3
-  - samtools=1.9
-  - numpy=1.18.4
-  - pysam=0.20.0
-  - minimap2=2.17
-  - bwa=0.7.17
-  - bedtools=2.29.2
-  - biopython=1.74
-  - pybedtools=0.8.1
-  - snakemake-minimal=5.13
-  - pytest=5.4.2
+  - python==3.10.13
+  - tqdm==4.66.1
+  - git
+  - plotnine==0.12.4
+  - pandas==2.1.3
+  - samtools==1.18
+  - numpy==1.26.2
+  - pysam==0.22.0 
+  - minimap2==2.17
+  - bwa==0.7.17
+  - bedtools==2.31.1
+  - biopython==1.81
+  - pybedtools==0.9.1
+  - snakemake-minimal==7.32.4
+  - pytest==7.4.3
   - pip==23.3.1
-  - setuptools
-  - pyvcf=0.6.8
-  - bcbio-gff
+  - setuptools==68.2.2
+  - pyvcf==0.6.8
+  - bcbio-gff==0.7.0 
   - pip:
     - git+https://github.com/artic-network/fieldbioinformatics.git@1.1.1
     - git+https://github.com/ThomasBaudeau/periscope_multifasta.git@master
