--- a/sgENERATE/recource/env/perimult.yaml
+++ b/sgENERATE/recource/env/perimult.yaml
@@ -23,6 +23,8 @@ dependencies:
   - setuptools==68.2.2
   - pyvcf==0.6.8
   - bcbio-gff==0.7.0 
+  - graphmap=0.5.2
+  - blasr
   - pip:
     - git+https://github.com/artic-network/fieldbioinformatics.git@1.1.1
     - git+https://github.com/ThomasBaudeau/periscope_multifasta.git@master
