debug  graph for illumina data

--- a/sgENERATE/recource/Snakefile
+++ b/sgENERATE/recource/Snakefile
@@ -45,6 +45,8 @@ rule generate_amplicon:
         path+'script/generate_amplicon.py'
 
 if not REAL:
+
+    
     checkpoint simu_phase:
         input:
             ref='result/{species}_multifastq.faa',
@@ -127,6 +129,7 @@ if not REAL:
             rm COV*
             """ 
             #
+        
     rule getnbread:
         input:
             'result/final_{species}_agregate.fastq'
@@ -134,22 +137,8 @@ if not REAL:
             'result/{species}_nbread.txt'
         shell:
             'cat {input.fastq} | wc -l > {output}'
-else:
 
-    rule make_graph: 
-            input:
-                a='Periscope/{species}_periscope_counts.csv',
-                peri='Periscope/{species}_periscope.bam',
-                d='Periscope/{species}_periscope_novel_counts.csv',
-                a2='Periscope_mult/{species}_periscope_counts.csv',
-                peri2='Periscope_mult/{species}_periscope.bam',
-                d2='Periscope_mult/{species}_periscope_novel_counts.csv',
-                b='result/{species}_multifastq.faa',
-                nbread='result/{species}_nbread.txt',
-            output:
-                'result/final_{species}_SG_ER.pdf'
-            script:
-                'script/make_stats.py'
+if REAL:
     
     rule run_periscope_multi:
         input:
@@ -168,24 +157,21 @@ else:
         shell:
             "periscope --fastq {input.fastq} --tool {params.tool}  --gff "+path+"script/covid.gff --technology ont --artic-primers V3 --output-prefix Periscope_mult/{wildcards.species} --threads 18;rm Periscope_mult/COV.*"
 
-    rule getnbread:
-        input:
-            fastq=config.get('fastq')
-        output:
-            'result/{species}_nbread.txt'
-        shell:
-            'cat {input.fastq} | wc -l > {output}'
+    
 
+    
 
             
     if config.get('tech')=='illumina':
-        rule periscope:
+        print('mode illumina')
+        rule periscope_1:
             input:
                 fastq=config.get('fastq')
             output:
+                '{species}_resulttt.bam',
                 'Periscope/{species}_periscope_counts.csv',
                 'Periscope/{species}_periscope_novel_counts.csv',
-                '{species}.bam'
+                
             params:
                 tech=config.get('tech')
             conda:
@@ -197,26 +183,48 @@ else:
                 periscope --fastq {input.fastq} --technology {params.tech} --artic-primers V3 --output-prefix {wildcards.species} --threads 18;
                 mv {wildcards.species}_periscope_counts.csv Periscope/{wildcards.species}_periscope_counts.csv;
                 mv {wildcards.species}_periscope_novel_counts.csv Periscope/{wildcards.species}_periscope_novel_counts.csv
+                mv {wildcards.species}.bam {wildcards.species}_resulttt.bam
                 """ 
 
-            rule periscope_bam:
-                input:
-                    '{species}.bam'
-                output:
-                    'Periscope/{species}_periscope.bam'
-                params:
-                    search = path+'script/parse_bam_peri.py"
-                    bed=path+'data/SGtable/orf_start.bed'
-                conda:
-                    'env/peri.yaml'
-                shell:
-                    """
-                    python {param.search} --bam {input} --orf-bed {params.bed} --output-prefix {wildcards.species} --threads 18;
-                    mv {species}_periscope.bam Periscope/{species}_periscope.bam;
-                    rm COV*
-                    """ 
+        rule periscope_bam:
+            input:
+                '{species}_resulttt.bam'
+            output:
+                'Periscope/{species}_periscope.bam'
+            params:
+                search = path+'script/parse_bam_peri.py',
+                bed=path+'data/SGtable/orf_start.bed'
+            conda:
+                'env/peri.yaml'
+            shell:
+                """
+                python {params.search} --bam {input} --orf-bed {params.bed} --output-prefix {wildcards.species} --threads 18;
+                mv {wildcards.species}_periscope.bam Periscope/{wildcards.species}_periscope.bam;rm COV*
+                """ 
+        rule getnbread:
+            input:
+                fastq=config.get('fastq')
+            output:
+                'result/{species}_nbread.txt'
+            shell:
+                'cat {input.fastq} | wc -l > {output}'
+        rule make_graph: 
+            input:
+                a='Periscope/{species}_periscope_counts.csv',
+                peri='Periscope/{species}_periscope.bam',
+                d='Periscope/{species}_periscope_novel_counts.csv',
+                a2='Periscope_mult/{species}_periscope_counts.csv',
+                peri2='Periscope_mult/{species}_periscope.bam',
+                d2='Periscope_mult/{species}_periscope_novel_counts.csv',
+                b='result/{species}_multifastq.faa',
+                nbread='result/{species}_nbread.txt',
+            output:
+                'result/final_{species}_SG_ER.pdf'
+            script:
+                'script/make_stats_illu.py'
 
-    else:
+    if not config.get('tech')=='illumina':
+        print('not illumina')
         rule periscope:
             input:
                 fastq=config.get('fastq')
@@ -238,7 +246,27 @@ else:
                 mv {wildcards.species}_periscope.bam Periscope/{wildcards.species}_periscope.bam
                 rm COV*
                 """ 
-        
+        rule getnbread:
+            input:
+                'result/final_{species}_agregate.fastq'
+            output:
+                'result/{species}_nbread.txt'
+            shell:
+                'cat {input.fastq} | wc -l > {output}'
+        rule make_graph: 
+            input:
+                a='Periscope/{species}_periscope_counts.csv',
+                peri='Periscope/{species}_periscope.bam',
+                d='Periscope/{species}_periscope_novel_counts.csv',
+                a2='Periscope_mult/{species}_periscope_counts.csv',
+                peri2='Periscope_mult/{species}_periscope.bam',
+                d2='Periscope_mult/{species}_periscope_novel_counts.csv',
+                b='result/{species}_multifastq.faa',
+                nbread='result/{species}_nbread.txt',
+            output:
+                'result/final_{species}_SG_ER.pdf'
+            script:
+                'script/make_stats.py'
 
 
 
