--- a/sgENERATE/recource/Snakefile
+++ b/sgENERATE/recource/Snakefile
@@ -136,7 +136,7 @@ if not REAL:
         output:
             'result/{species}_nbread.txt'
         shell:
-            'cat {input.fastq} | wc -l > {output}'
+            'cat {input} | wc -l > {output}'
 
 if REAL:
     
