--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       max-parallel: 5
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.10]
 
     steps:
     - uses: actions/checkout@v4
@@ -22,7 +22,11 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env update --file environment.yml --name base
+        cwd
+        create -f environment.yml
+        conda activate sgENERATE
+        python -m pip install --upgrade pip
+        pip install .
     - name: Lint with flake8
       run: |
         conda install flake8
