--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -22,7 +22,7 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        create -f environment.yml
+        conda create -f environment.yml
         conda activate sgENERATE
         python -m pip install --upgrade pip
         pip install .
