--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -23,6 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         conda env update --file environment.yml --name sgENERATE
+        conda init
         conda activate sgENERATE
         python -m pip install --upgrade pip
         pip install .
