--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -22,12 +22,16 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda init
         conda env update --file environment.yml --name sgENERATE
-        conda init
-        conda activate sgENERATE
-        python -m pip install --upgrade pip
-        pip install .
+    - name: Install package
+      shell: bash
+      run: |
+          eval "$(${CONDA}/bin/conda shell.bash hook)"
+          # conda commands here, like activate
+          conda init
+          conda activate sgENERATE
+          python -m pip install --upgrade pip
+          pip install .
     - name: Lint with flake8
       run: |
         conda install flake8
