--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -34,6 +34,7 @@ jobs:
           pip install .
     - name: Lint with flake8
       run: |
+        conda init
         conda activate sgENERATE
         conda install flake8
         # stop the build if there are Python syntax errors or undefined names
