--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -33,7 +33,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install .
     - name: Lint with flake8
+      shell: bash
       run: |
+        eval "$(${CONDA}/bin/conda shell.bash hook)"
+        # conda commands here, like activate
         conda init
         conda activate sgENERATE
         conda install flake8
