--- a/docs/_sources/Requirements.rst.txt
+++ b/docs/_sources/Requirements.rst.txt
@@ -14,7 +14,7 @@ sgENERATE was made to work on the following systems:
 Python Versions
 -----------------
 
-Python version currently support:
+Python versions currently supported:
 
  * Python 3.9
  * Python 3.8
@@ -28,7 +28,7 @@ All dependencies are managed with conda
 
 .. WARNING::
 
-   In order to install sgENERATE conda needs to be installed.
+   conda installation is required priori to installing sgENERATE
    see: `Conda documentation <https://conda.io/projects/conda/en/latest/user-guide/install/index.html>`_
 
 
