--- a/docs/_sources/Requirements.rst.txt
+++ b/docs/_sources/Requirements.rst.txt
@@ -28,7 +28,7 @@ All dependencies are managed with conda
 
 .. WARNING::
 
-   conda installation is required priori to installing sgENERATE
+   conda installation is required prior to installing sgENERATE
    see: `Conda documentation <https://conda.io/projects/conda/en/latest/user-guide/install/index.html>`_
 
 
